# PLUME-QE

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: api_overview.md  optimization_plan.md
plume_qe_core/: Cargo.toml
plume_qe_core/benches/: core_bench.rs
plume_qe_core/src/: aead.rs  context.rs  crypto.rs  graph.rs  kem.rs  lib.rs  payload.rs  polymorph.rs  preset.rs  profiles.rs  ring.rs  rng.rs  scheduler.rs  session.rs  versioning.rs
plume_qe_core/tests/: fuzz_harness.rs  golden_vectors.rs  version_lock.rs
plume_qe_core/tests/vectors/: chaotic_ciphertext.json  graph_walk.json  kem_only.json  min_profile_ciphertext.json  payload_file.json
plume_qe_demo/: Cargo.toml
plume_qe_demo/src/: main.rs
