[package]
name = "plume_qe_core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
rand_chacha = "0.3"
thiserror = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
rand_chacha = "0.3"
hex = "0.4"
once_cell = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
