[package]
name = "plume_qe_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
plume_qe_core = { path = "../plume_qe_core" }
rand = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
env_logger = "0.11"
log = "0.4"
hostname = "0.4"
blake3 = "1"
